--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,7 +12,7 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #2f54eb; // 提示：主颜色需要从 brand-color.vue 里面改
+$primary   : #1890ff; // 提示：主颜色需要从 brand-color.vue 里面改
 $secondary : #26A69A;
 $accent    : #9C27B0;
 
